--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -143,7 +143,7 @@
     }
 
     .pv-board-content {
-        height: calc(100vh - 320px);
+        height: calc(100vh - 350px) !important;
     }
 }
 
