--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1008,14 +1008,13 @@ html {
 }
 
 .ndpv .pv-table input[type=checkbox] {
-  zoom: 1.5;
   border-radius: 5px;
   border: 1px solid rgba(147, 147, 147, 0.9411764706);
   box-shadow: none;
   position: relative;
   top: 2px;
-  transform: scale(0.8);
-  -moz-transform: scale(0.8);
+  transform: scale(1);
+  -moz-transform: scale(1);
 }
 
 .ndpv .pv-table tr {
@@ -2592,13 +2591,13 @@ html {
 }
 
 .wp-admin.ndpv .pv-table input[type=checkbox] {
-  zoom: 1.2;
+  // zoom: 1.2;
   top: -1px !important;
 }
 
 @media screen and (max-width: 768px) {
   .wp-admin.ndpv .pv-table input[type=checkbox] {
-    zoom: 0.8 !important;
+    // zoom: 0.8 !important;
   }
 }
 
