--- a/src/scss/partials/_crud.scss
+++ b/src/scss/partials/_crud.scss
@@ -361,12 +361,15 @@
 
   .pv-db-task-deal {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 60% 40%;
     column-gap: 30px;
     margin-bottom: 30px;
 
     @media screen and (max-width: 820px) {
       grid-template-columns: auto;
+      .pv-punnel  {
+        margin-top: 30px;
+      }
     }
   }
 
