--- a/src/scss/forms/_fields.scss
+++ b/src/scss/forms/_fields.scss
@@ -7,13 +7,7 @@
 input[type="text"],
 input[type="email"],
 input[type="url"],
-input[type="password"],
-input[type="search"] {
-  &:focus {
-    //outline: none;
-    //box-shadow: none;
-  }
-}
+input[type="password"]
 
 select {
   background: none;
