--- a/src/js/inv-tmpl/scss/all.scoped.scss
+++ b/src/js/inv-tmpl/scss/all.scoped.scss
@@ -212,6 +212,11 @@
       font-weight: 400;
     }
   }
+  .pv-bank-info {
+    color: #4a5568;
+    font-size: 12px;
+    line-height: 150%;
+  }
 
   .pv-inv-account {
     display: flex;
