pro label udpate

--- a/src/scss/partials/_tabs.scss
+++ b/src/scss/partials/_tabs.scss
@@ -462,7 +462,7 @@
         font-size: 12px;
       }
 
-      span:first-child {
+      .pv-tab-icon {
         border-radius: 8px;
         font-size: 18px !important;
         margin-right: 10px;
@@ -475,7 +475,7 @@
         }
       }
 
-      span:last-child {
+      .pv-tab-label {
         align-self: center;
         font-weight: 500;
         font-size: 16px;
