delete client issue fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,3 +32,7 @@
 # Navigation 
 --------------------------------------------------------------*/
 @import "navigation/navigation";
+
+.ndpv #user_login {
+	background-color: #fff;
+}
