--- a/src/scss/partials/_modal.scss
+++ b/src/scss/partials/_modal.scss
@@ -535,12 +535,6 @@
     max-width: 1040px;
     display: grid;
     grid-template-columns: 60% 40%;
-    border-top-right-radius: 0%;
-    border-bottom-right-radius: 0%;
-
-    .pv-close {
-      top: 5%;
-    }
 
     .pv-modal-footer {
       padding: 0;
@@ -550,6 +544,9 @@
     .pv-modal-discussion-content {
       overflow-y: scroll;
       padding: 30px;
+      display: flex;
+      flex-direction: column;
+      grid-template-columns: 200px auto 200px;
     }
 
   }
