--- a/src/scss/partials/_modal.scss
+++ b/src/scss/partials/_modal.scss
@@ -532,7 +532,6 @@
   }
 
   .pv-modal-task-discussion {
-    max-width: 1040px;
     display: grid;
     grid-template-columns: 60% 40%;
 
@@ -547,6 +546,10 @@
       display: flex;
       flex-direction: column;
       grid-template-columns: 200px auto 200px;
+
+      .pv-avatar-group {
+        height: 70px;
+      }
     }
 
   }
